--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="/client/src/assets/favicon.ico" />
+    <link rel="shortcut icon" href="src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RV Scholar</title>
   </head>
@@ -12,4 +12,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-`
+` 
